--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,12 @@ img:hover {
   cursor: pointer;
   background: #f0f0f0;
 }
+@media (max-width: 529px) {
+  .container {
+    height: 100vh;
+    width: 100vh;
+  }
+}
 
 @media (max-width: 400px) {
   .container {
